# 2595-repro

./: MODULE.bazel  WORKSPACE.bzlmod  readme.md
